// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gradient tests on iOS renders a Gradient 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ARTSurfaceView
    style={
      Object {
        "bottom": 0,
        "height": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  >
    <ARTShape
      d={
        Array [
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
        ]
      }
      fill={
        Array [
          1,
          0,
          0,
          -0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`Gradient tests on iOS renders a Gradient using array prop styles 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "height": 200,
      "width": 200,
    }
  }
>
  <ARTSurfaceView
    style={
      Object {
        "bottom": 0,
        "height": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  >
    <ARTShape
      d={
        Array [
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
        ]
      }
      fill={
        Array [
          1,
          0,
          0,
          -0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`Gradient tests on iOS renders a Gradient using prop styles 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "height": 200,
      "width": 200,
    }
  }
>
  <ARTSurfaceView
    style={
      Object {
        "bottom": 0,
        "height": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  >
    <ARTShape
      d={
        Array [
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
        ]
      }
      fill={
        Array [
          1,
          0,
          0,
          -0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`Gradient tests on iOS renders a Gradient using stylesheets 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "height": 200,
      "margin": 10,
      "width": 200,
    }
  }
>
  <ARTSurfaceView
    style={
      Object {
        "bottom": 0,
        "height": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  >
    <ARTShape
      d={
        Array [
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
        ]
      }
      fill={
        Array [
          1,
          0,
          0,
          -0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`Gradient tests on iOS renders a Gradient with an angle (-45) 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ARTSurfaceView
    style={
      Object {
        "bottom": 0,
        "height": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  >
    <ARTShape
      d={
        Array [
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
        ]
      }
      fill={
        Array [
          1,
          0,
          0,
          -0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`Gradient tests on iOS renders a Gradient with an angle (45) 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ARTSurfaceView
    style={
      Object {
        "bottom": 0,
        "height": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  >
    <ARTShape
      d={
        Array [
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
        ]
      }
      fill={
        Array [
          1,
          0,
          0,
          0,
          -0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`Gradient tests on iOS renders a Gradient with an angle (90) 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ARTSurfaceView
    style={
      Object {
        "bottom": 0,
        "height": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  >
    <ARTShape
      d={
        Array [
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
        ]
      }
      fill={
        Array [
          1,
          0,
          0,
          0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`Gradient tests on iOS renders a Gradient with an angle (180) 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ARTSurfaceView
    style={
      Object {
        "bottom": 0,
        "height": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  >
    <ARTShape
      d={
        Array [
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
        ]
      }
      fill={
        Array [
          1,
          0,
          0,
          0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`Gradient tests on iOS renders a Gradient with an angle (270) 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ARTSurfaceView
    style={
      Object {
        "bottom": 0,
        "height": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  >
    <ARTShape
      d={
        Array [
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
          2,
          0,
          0,
        ]
      }
      fill={
        Array [
          1,
          0,
          0,
          0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;
